data/all_generated_tests/raw_wast_tests/block_UnreachableCodeExecution_2018.wast
;; 9. **Test Description**: Create a complex block that uses both `br` and `br_if` to manipulate control flow, targeting sections of code outside the block containing `unreachable` instructions. This tests forward branching mechanisms to ensure the proper label targets are resolved without execution errors.

(assert_invalid
  (module 
    (func $complex-block (result i32)
      (block (result i32)
        (br_if 0 (i32.const 1))
        (unreachable)
      )
      (i32.const 42)
    )
  )
  "mismatched return type"
)